--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.390",
+    "@remotion/tailwind-v4": "4.0.390",
     "@remotion/zod-types": "4.0.390",
+    "openai": "^4.77.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.390",
-    "zod": "3.22.3",
-    "@remotion/tailwind-v4": "4.0.390",
-    "tailwindcss": "4.0.0"
+    "tailwindcss": "4.0.0",
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.390",
